# emerald-ffi

./: .appveyor.yml  .gitignore  Cargo.toml  Makefile  README.md  emerald.h
example/: main.c
src/: lib.rs
